--- a/sierra/templates/sierra/project.html
+++ b/sierra/templates/sierra/project.html
@@ -116,10 +116,10 @@
     </head>
     <body>
         <article class="main">
-            <h1 id="the_sierra"><span class="emoji">😃</span> <span class="text">Sierra</span></h1><!--
+            <h1 id="the_sierra"><a href="/" class="emoji">😃</a> <span class="text">Sierra</span></h1><!--
             --><div id="the_search"><!--
                 --><form><!--
-                    --><input type="text" autofocus="autofocus" /><!--
+                    --><input type="search" autofocus="autofocus" /><!--
                 --></form><!--
             --></div>
         </article>
@@ -128,6 +128,46 @@
         
         <article class="nav">
             <h2>{{project.rel_path}}</h2>
+            {# <h4>Fichiers</h4> #}
+            {% if project.has_source %}
+                <p><code>source.tex</code> {{ project.source_stat }}</p>
+            {% else %}
+                <p>No source yet, upload it !</p>
+            {% endif %}
+        </article>
+        
+        <article>
+            <h2>→ Préparation</h2>
+            <h3>🖊️ Uploader la source (.tex)</h3>
+            <section>
+                <form action="/raw/project/upload_source/" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <p><input name="source" type="file"></p>
+                    <input type="hidden" name="project_id" value="{{project.id}}"/>
+                    <input type="submit"/>
+                </form>
+            </section>
+        </article>
+        
+        <article>
+            <h2>→ Scans non corrigés</h2>
+            <h3>🖊️ Uploader des scans</h3>
+            <section>
+                <form action="/raw/project/upload_scans/" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <p><input type="file" multiple></p>
+                    <input type="hidden" name="project_id" value="{{project.id}}"/>
+                    <input type="submit"/>
+                </form>
+            </section>
+        </article>
+        
+        <article>
+            <h2>→ Scans corrigés</h2>
+        </article>
+        
+        <article>
+            <h2>→ Informations</h2>
         </article>
         
         </div>
