--- a/sierra/templates/sierra/index.html
+++ b/sierra/templates/sierra/index.html
@@ -112,7 +112,7 @@
             */
             
             .info {
-                font-variant: italics;
+                font-style: italic;
                 font-size: 75%;
             }
         </style>
