--- a/sierra/templates/sierra/papers.html
+++ b/sierra/templates/sierra/papers.html
@@ -145,7 +145,7 @@
             <p><strong>{{ page_infos |length }}</strong> copie{{ page_infos |length |pluralize:",s"}} dans ce projet :</p>
         
             <table>
-                <tr><th>a</th><th>b</th><th>c</th></tr>
+                <tr><th>student</th><th>page</th><th>copy</th></tr>
             {% for a,b,c in page_infos %}
                 <tr><td>{{ a }}</td><td>{{ b }}</td><td>{{ c }}</td></tr>
             {% endfor %}
