--- a/sierra/templates/sierra/project.html
+++ b/sierra/templates/sierra/project.html
@@ -134,9 +134,9 @@
             {% if project.has_source %}
                 <p><code>source.tex</code> {{ project.source_stat }}</p>
                 {% if project.does_compile %}
-                Compilation succeeded, here is a link to [the pdf](subject.pdf)
+                    Compilation succeeded, here is a link to [the pdf](subject.pdf)
                 {% else %}
-                Your file does not compile, click here to see the latex log.
+                    Your file does not compile, click here to see the latex log.
                 {% endif %}
             {% else %}
                 <p>No source yet, upload it !</p>
@@ -168,7 +168,7 @@
             <section>
                 <p class="info">À l'occaz</p>
             </section>
-            <h3>🖊️ Modifer la source</h3>
+            <h3>🖊️ Modifier la source</h3>
             <section>   
                 <p class="info">À l'occaz</p>
             </section>
